--- a/android/automl/app/build.gradle
+++ b/android/automl/app/build.gradle
@@ -13,6 +13,7 @@ android {
         versionName "1.11"
         vectorDrawables.useSupportLibrary = true
         setProperty("archivesBaseName", "vision-automl-remote-model-quickstart")
+        signingConfig signingConfigs.debug
     }
     buildTypes {
         proguard {
