--- a/android/translate-showcase/app/build.gradle
+++ b/android/translate-showcase/app/build.gradle
@@ -25,7 +25,7 @@ android {
     compileSdkVersion 31
     defaultConfig {
         applicationId "com.google.mlkit.showcase.translate"
-        minSdkVersion 21
+        minSdk 31
         targetSdkVersion 31
         versionCode 1
         versionName "1.0"
@@ -49,24 +49,24 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.fragment:fragment-ktx:1.4.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'androidx.core:core-ktx:1.10.1'
+    implementation 'androidx.fragment:fragment-ktx:1.5.7'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.1'
     testImplementation 'junit:junit:4.13.1'
-    androidTestImplementation 'androidx.test:runner:1.4.0'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation 'androidx.test:runner:1.5.2'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
     // Add CameraX dependencies
     implementation "androidx.camera:camera-core:"
-    implementation "androidx.camera:camera-camera2:1.1.0-alpha12"
-    implementation "androidx.camera:camera-lifecycle:1.1.0-alpha12"
-    implementation "androidx.camera:camera-view:1.0.0-alpha32"
+    implementation 'androidx.camera:camera-camera2:1.3.0-alpha06'
+    implementation 'androidx.camera:camera-lifecycle:1.3.0-alpha06'
+    implementation 'androidx.camera:camera-view:1.3.0-alpha06'
 
     // Add ML Kit dependencies
-    implementation 'com.google.android.gms:play-services-mlkit-text-recognition:18.0.1'
+    implementation 'com.google.android.gms:play-services-mlkit-text-recognition:19.0.0'
     implementation 'com.google.mlkit:language-id:17.0.4'
     implementation 'com.google.mlkit:translate:17.0.1'
 }
