Link RapidFuzz library

--- a/android/translate-showcase/app/build.gradle
+++ b/android/translate-showcase/app/build.gradle
@@ -30,6 +30,11 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        externalNativeBuild {
+            cmake {
+                cppFlags ''
+            }
+        }
     }
     buildTypes {
         release {
@@ -43,6 +48,12 @@ android {
     }
     kotlinOptions {
         jvmTarget = "1.8"
+    }
+    externalNativeBuild {
+        cmake {
+            path file('src/main/cpp/rapid_fuzz/CMakeLists.txt')
+            version '3.18.1'
+        }
     }
 }
 
